# Smart.fit

./: Objectifs.txt  description.txt  espace-administrateurjbh.pptx  fiche.h  fiche23.h
Diététicien/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  diet--ticien.glade.bak  diet--ticien.gladep  dieteticien.glade  dieteticien.gladep
Diététicien/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  diet--ticien  fiches.txt  fonction.c  fonction.h  interface.c  interface.c.bak  login.c  login.h  users.txt
Diététicien/src/.deps/: callbacks.Po  fonction.Po  login.Po
Integrations/Integration version 1.7/src/: Makefile  Makefile.am  Makefile.in  afficher.c  affichercalen.c  affichercalen.h  ajouter.c  dieteticiens.txt  fonction.h  fonctions.h  interface.c.bak  interface.h.bak  login  main.c  modifier.c  ntbook.c  reservation.c  reservation.h  salle.txt  supprimer.c  tempttt.txt  tmp.txt  users.txt  verifier.c
Integrations/Integration version 1.7/src/.deps/: afficher.Po  ajouter.Po  callbacks.Po  modifier.Po  reservation.Po
Integrations/Integration version 1/src/: Fiche_diet.txt  Fiche_med.txt  Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  fonction.c  fonctions.c  fonctions.h  interface.c  login  main.c  tmp.txt  users.txt
Integrations/Integration version 1/src/.deps/: callbacks.Po  fonction.Po  fonctions.Po
KOUSSAY/: Diagramme1.dia  coach.pptx  main.c
Login/: Makefile  config.status  login.glade.bak
Maquette/: Maquette.pptx
RADHWEN/: Créer_Supprimer_Consulter-les-fiches-médicale.dia  authentification.dia  calendrier.dia  maquette.pptx  modifier-fiche.dia  modifier-profil.dia  module-dauthentification.dia  supprimer-fiche-ou-rendez-vous.dia
SALMA/: fichier.h.odt  maquettes_adherents.ppt  organigrammes.docx  struct.h  structt.h
admin/: Makefile  admin.glade.bak  config.status
admin/src/: Makefile  Makefile.am  Makefile.in  admin  afficher.c  afficher.h  affichercalen.c  ajouter.c  callbacks.c  callbacks.h  interface.c  interface.c.bak  interface.h.bak  main.c  modifier.h  salle.txt  supprimer.c  supprimer.h  user.txt  users.txt  verifier.c
admin/src/.deps/: afficher.Po  affichercalen.Po  ajouter.Po  callbacks.Po  modifier.Po  supprimer.Po  verifier.Po
esp_adh/: Makefile  Makefile.am  Makefile.in  config.h  configure  (+5 more)
esp_adh/src/: Makefile  Makefile.am  Makefile.in  adherents.txt  calendrier.txt  callbacks.c  callbacks.h  coach.txt  dieteticiens.txt  dispo_coach.txt  dispo_diet.txt  dispo_kiné.txt  dispo_med.txt  esp_adh  f.c  f.h  fiche_med.txt  interface.c  interface.c.bak  interface.h.bak  kine.txt  main.c  medecin.txt  rdv_adherent.txt  staff.txt  tmp.txt  users.txt
esp_adh/src/.deps/: f.Po
(+193 files in other folders)
